Сделана регистрация учебного заведения, института, кафедры

--- a/src/main/webapp/static/css/mycss.css
+++ b/src/main/webapp/static/css/mycss.css
@@ -14,3 +14,12 @@ select{
 #semester{
 	width: 64px;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+textarea{
+	resize: none;
+}
